kustomize/overlays/dev/deployment-api.tmpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nicedishy-api
spec:
  template:
    spec:
      # volumes:
      #   - name: migrations
      #     emptyDir:
      #       medium: Memory
      # initContainers:
      #   - image: nicedishy-migrations
      #     name: migrations-plan
      #     volumeMounts:
      #       - name: migrations
      #         mountPath: /migrations
      #     args: ["plan"]
      #     env:
      #       - name: SCHEMAHERO_DRIVER
      #         value: postgres
      #       - name: SCHEMAHERO_SPEC_FILE
      #         value: /tables
      #       - name: SCHEMAHERO_OUT
      #         value: /migrations/plan.yaml
      #       - name: SCHEMAHERO_URI
      #         valueFrom:
      #           secretKeyRef:
      #             name: nicedishy-timescale
      #             key: uri
      #   - image: nicedishy-migrations
      #     name: migrations-apply
      #     volumeMounts:
      #       - name: migrations
      #         mountPath: /migrations
      #     args: ["apply"]
      #     env:
      #       - name: SCHEMAHERO_DRIVER
      #         value: postgres
      #       - name: SCHEMAHERO_DDL
      #         value: /migrations/plan.yaml
      #       - name: SCHEMAHERO_URI
      #         valueFrom:
      #           secretKeyRef:
      #             name: nicedishy-timescale
      #             key: uri

      containers:
        - name: nicedishy-api
          args: ["api", "--log-level", "debug"]
