kustomize/overlays/dev/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nicedishy-api
spec:
  template:
    spec:
      volumes:
        - name: migrations
          emptyDir:
            medium: Memory    
      containers:
        - name: nicedishy-api
          args: ["api", "--log-level", "debug"]
