kustomize/overlays/dev/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nicedishy-api
  labels:
    app: nicedishy-api
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: http
  selector:
    app: nicedishy-api
