kustomize/overlays/dev/minio.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: minio
    release: minio
  name: minio
spec:
  serviceName: minio
  selector:
    matchLabels:
      app: minio
      release: minio
  template:
    metadata:
      labels:
        app: minio
        release: minio
      name: minio
    spec:
      securityContext:
        runAsUser: 1001
        fsGroup: 1001
      containers:
      - args:
          - server
          - /data
          - --console-address=:9999
        image: minio/minio:RELEASE.2021-10-10T16-53-30Z
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /minio/health/live
            port: service
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        name: minio
        ports:
          - containerPort: 9000
            name: service
          - containerPort: 9999
            name: console
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /minio/health/ready
            port: service
          initialDelaySeconds: 5
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
        volumeMounts:
          - mountPath: /data
            name: miniodata  # this is where the data is stored

  volumeClaimTemplates:
  - metadata:
      name: miniodata
    spec:
      accessModes:
      - "ReadWriteOnce"
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: minio  
spec:
  ports:
  - name: service
    port: 9000
    targetPort: 9000
  - name: console
    port: 9999
    targetPort: 9999    
  selector:
    app: minio
    release: minio
  type: ClusterIP
