kustomize/overlays/dev/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: nicedishy-api
  labels:
    app: nicedishy-api  
  annotations:
    dev.okteto.com/auto-ingress: "true"    
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: http
  selector:
    app: nicedishy-api
